--- a/portal_acronyms.css
+++ b/portal_acronyms.css
@@ -9302,7 +9302,7 @@ a {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
-  color: #4242b1; }
+  color: #009ee2; }
 
   .card-dark:hover {
     background-color: #4242b1;
