--- a/portal_pink.css
+++ b/portal_pink.css
@@ -9302,10 +9302,10 @@ a {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
-  color: #4242b1; }
+  color: #e5007d; }
 
   .card-dark:hover {
-    background-color: #4242b1;
+    background-color: #009ee2;
     color: white;
   }
  
