--- a/portal_logos.css
+++ b/portal_logos.css
@@ -9309,6 +9309,10 @@ a {
     color: white;
   }
  
+ #logo{
+    font-size: 20px;
+    letter-spacing: 3px;
+  }
 /*---
 title: Cards
 section: card-teaser-magenta
